feat(settings): add settings screen with theme, language, time format, and notification options
- Implement SettingsProvider using Provider for state management
- Add theme mode selection (system, light, dark) with SharedPreferences persistence
- Add language selection (Arabic/English) with immediate app update
- Add time format toggle (12h/24h) and integrate with HeaderWidget
- Add adhan sound toggle and Quran font size slider
- Integrate settings icon in HeaderWidget to navigate to SettingsScreen
- Update HomeScreen bottom navigation: replace settings with profile

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -17,5 +17,19 @@
   "dzuhur": "ظهر",
   "ashr": "عصر",
   "maghrib": "مغرب",
-  "settings": "الإعدادات"
+  "settings": "الإعدادات",
+    "system": "تلقائي (حسب النظام)",
+  "light": "فاتح",
+  "dark": "داكن",
+  "arabic": "العربية",
+  "english": "English",
+  "twelveHour": "12 ساعة",
+  "twentyFourHour": "24 ساعة",
+  "adhanSound": "صوت الأذان",
+  "fontSize": "حجم الخط",
+   "appearance": "المظهر",
+  "language": "اللغة",
+  "timeFormat": "تنسيق الساعة",
+   "notifications": "الإشعارات",
+    "quranSettings": "إعدادات القرآن"
 }
