feat: complete home screen with categories section, settings screen with theme/language options, and bottom navigation updates
- Add SettingsScreen with theme mode, language, time format, adhan sound, and font size options using Provider
- Implement CategoriesSection with 8 interactive buttons (Mushaf, Azkar, Tasbih, Qibla, Dua, Zakat, Ramadan Calendar, Calendar)
- Update HomeScreen bottom navigation: replace settings with profile icon, open settings from header
- Add daily activity, azkar, dua, and tasbih widgets to home screen
- Fix layout overflow issues in categories grid using FittedBox and adjusted aspect ratio
- Update ARB files with new translation keys (mushaf, zakat, ramadan_calendar, categories, etc.)

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -31,5 +31,18 @@
   "language": "اللغة",
   "timeFormat": "تنسيق الساعة",
    "notifications": "الإشعارات",
-    "quranSettings": "إعدادات القرآن"
+    "quranSettings": "إعدادات القرآن",
+      "tasbih": "سبحة",
+  "azkar": "أذكار",
+  "dua": "أدعية",
+   "mushaf": "المصحف",
+  "prayer_times": "مواقيت الصلاة",
+  "more": "المزيد",
+    "qibla": "القبلة",
+  "mosques": "المساجد",
+  "events": "المناسبات",
+  "calendar": "التقويم",
+   "categories": "التصنيفات",
+   "zakat": "حساب الزكاة",
+  "ramadan_calendar": "إمساكية رمضان"
 }
